--- a/duplicate.html
+++ b/duplicate.html
@@ -68,7 +68,7 @@
             </div>
             <div class="about-info">
                 
-                <img src="C:\Users\smang\OneDrive\Pictures\Saved Pictures\334066167_148732571438811_7406887273882172408_n.jpg" alt="profiel-picture">
+                <img src="images/334066167_148732571438811_7406887273882172408_n.jpg" alt="profiel-picture">
             </div>
         </div>
 
