--- a/duplicate.html
+++ b/duplicate.html
@@ -81,7 +81,7 @@
         </div>
         <div class="projets-profile">
             <div>
-                <img src="C:\Users\smang\OneDrive\Pictures\Screenshots\Screenshot 2025-01-19 190912.png" alt="matrixS.png">
+                <img src="images/Screenshot 2025-01-19 190912.png" alt="matrix">
                 <h1>MPHEMBA MATRIX</h1>
                 <p>A online shopping website offering various computer comp...</p>
                 <a id="openMatrix" href="#">view more</a>
@@ -90,7 +90,7 @@
                 </a>
             </div>
             <div>
-                <img src="C:\Users\smang\OneDrive\Pictures\Screenshots\Screenshot 2025-01-16 140411.png" alt="carvoting.png">
+                <img src="images/Screenshot 2025-01-16 140411.png" alt="carvoting">
                 <h1>CAR VOTING APP</h1>
                 <p>Application for finding which cars people loves the most</p>
                 <a id="voteapp" href="#">view more</a>
@@ -99,7 +99,7 @@
                 </a>
             </div>
             <div>
-                <img src="C:\Users\smang\OneDrive\Pictures\Screenshots\Screenshot 2025-01-16 140758.png" alt="surcecode.png">
+                <img src="images/Screenshot 2025-01-16 140758.png" alt="surcecode">
                 <h1>CHATBOT</h1>
                 <p>A chatbot that is responsible for health aid techniques...</p>
                 <a id="chatbotA" href="#">view more</a>
