--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
             <p>A final year student who is passionate about coding and web development.<br> Creating 
                responsive, iterative and user-friendly web applications.
             </p>
+            <h3>SKILLS</h3>
                 <a>
                     JavaScript
                 </a>
                 <a>
                     Java
+                </a>
+                <a>
+                    Python
                 </a>
         </div>
         <div class="gears">
