--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <p>A young passionate front-end developer who loves creating<br>
                clean, user-friendly designs and bringing them to life with code.<br> 
                I specialize in HTML, CSS, and JavaScript to build responsive<br> 
-               and engaging web interfaces also Java for back-end creating API's. Let's
+               and engaging web interfaces. I also specialise in Java and Python for back-end by creating API's. Let's
                make the web more beautiful together!</p>
                <div class="button2">
                     <a href="https://drive.google.com/file/d/1Mx86t18Ngo-AxzAnNe_gcm50RpJShZ6R/view?usp=drivesdk" target="_blank">Curriculam Vitae</a>
