--- a/index.html
+++ b/index.html
@@ -103,11 +103,20 @@
                 </a>
             </div>
             <div>
-                <img src="images/Screenshot 2025-01-16 140758.png" alt="surcecode">
+                <img src="images/Screenshot 2025-01-16 140758.png" alt="chatbot">
                 <h1>CHATBOT</h1>
                 <p>A chatbot that is responsible for health aid techniques...</p>
                 <a id="chatbotA" href="#">view more</a>
                 <a href="https://github.com/smangasmashntuli/sntuliport/blob/main/mysrcitp.js" target="_blank" rel="noopener noreferrer">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                </a>
+            </div>
+            <div>
+                <img src="images/Screenshot 2025-02-12 152328.png" alt="restaurant">
+                <h1>Chicken Licken mini</h1>
+                <p>A mini clone of Chicken Licken...</p>
+                <a id="chatbotA" href="resturant.html" target="_blank">view more</a>
+                <a href="">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
                 </a>
             </div>
