--- a/resturant.html
+++ b/resturant.html
@@ -16,41 +16,41 @@
             <button class="carousel-button left" onclick="scrollCarousel(-1)">&#8249;</button>
             <div class="carousel">
                 <div class="carousel-card">
-                    <img src="C:\Users\smang\Downloads\demo2.png" alt="demo2">
+                    <img src="images/demo2.png" alt="demo2">
                     <span>NEW SALAD Chicken<br>with only R12.00 each</span>
                     <a href="#">Order now</a>
                 </div>
                 <div class="carousel-card">
-                    <img src="C:\Users\smang\Downloads\chick2.png" alt="Burgers">
+                    <img src="images/chick2.png" alt="Burgers">
                     <span>Introducing new Burgers<br> Get them for R75.00</span>
                     <a href="#">Order now</a>
                 </div>
                 <div class="carousel-card">
-                    <img src="C:\Users\smang\Downloads\demo3.png" alt="demo3">
+                    <img src="images/demo3.png" alt="demo3">
                     <span>GET Chicken SoulBites<br> going for R45.00</span>
                     <a href="#">Order now</a>
                 </div>
                 <div class="carousel-card">
-                    <img src="C:\Users\smang\Downloads\demo4.png" alt="demo4">
+                    <img src="images/demo4.png" alt="demo4">
                     <span>Feeling hot? Worry no more SUNDAE LICK'N is here <br>R25.00</span>
                     <a href="#">Order now</a>
                 </div>
                 <div class="carousel-card">
-                    <img src="C:\Users\smang\Downloads\demo5.png" alt="demo5">
+                    <img src="images/demo5.png" alt="demo5">
                     <span>Breakfast going <br>for R68.00 only</span>
                     <a href="#">Order now</a>
                 </div>
                 <div class="carousel-card">
-                    <img src="C:\Users\smang\Downloads\demo1.png" alt="demo1">
+                    <img src="images/demo1.png" alt="demo1">
                     <span>Get POP Chicken Shaker <br>at R30.00</span>
                     <a href="">Order now</a>
                 </div>
                 <div class="carousel-card">
-                    <img src="C:\Users\smang\Downloads\demo6.png" alt="demo6">
+                    <img src="images/demo6.png" alt="demo6">
                     <span>Chicky Licky Coming soon</span>
                 </div>
                 <div class="carousel-card">
-                    <img src="C:\Users\smang\Downloads\demo7.png" alt="demo7">
+                    <img src="images/demo7.png" alt="demo7">
                     <span>Get Double Thick Shake at R22.00</span>
                     <a href="">Order now</a>
                 </div>
@@ -61,22 +61,22 @@
 
         <h2>CHICKEN LICKEN MEALS</h2>
         <div class="catalogue-container">
-            <a href="#family" class="catalogue" onclick="showPopup('C:/Users/smang/Downloads/meal1.png', 'LUNCH Meal', 'R75.00', '2 pieces + toast + 300ml Coke')">
+            <a href="#family" class="catalogue" onclick="showPopup('images/meal1.png', 'LUNCH Meal', 'R75.00', '2 pieces + toast + 300ml Coke')">
                 <span>
                     <strong>R75.00</strong> <br>LUNCH Meal
                 </span>
             </a>
-            <a href="#family" class="catalogue" onclick="showPopup('C:/Users/smang/Downloads/meal2.png', 'HOTWINGS MEAL MAX®', 'R92.00', '8 Hotwings® <br>+ toast <br>+ 440ml Coke')">
+            <a href="#family" class="catalogue" onclick="showPopup('images/meal2.png', 'HOTWINGS MEAL MAX®', 'R92.00', '8 Hotwings® <br>+ toast <br>+ 440ml Coke')">
                 <span>
                     <strong>R92.00</strong> <br>HOTWINGS MEAL MAX®
                 </span>
             </a>
-            <a href="#family" class="catalogue" onclick="showPopup('C:/Users/smang/Downloads/meal3.png', 'SOULSISTER Party®', 'R120.00', '5 pieces + 2 regular Soul Fries™')">
+            <a href="#family" class="catalogue" onclick="showPopup('images/meal3.png', 'SOULSISTER Party®', 'R120.00', '5 pieces + 2 regular Soul Fries™')">
                 <span>
                     <strong>R120.00</strong> <br>SOULSISTER Party®
                 </span>
             </a>
-            <a href="#family" class="catalogue" onclick="showPopup('C:/Users/smang/Downloads/meal4.png', 'SOULSISTER®', 'R43.00', '2 pieces <br>+ a portion of Soul Fries™')">
+            <a href="#family" class="catalogue" onclick="showPopup('images/meal4.png', 'SOULSISTER®', 'R43.00', '2 pieces <br>+ a portion of Soul Fries™')">
                 <span>
                     <strong>R43.00</strong> <br>SOULSISTER®
                 </span>
@@ -86,12 +86,12 @@
                     <strong>R65.00</strong> <br>SOULSISTER Max®
                 </span>
             </a>
-            <a href="#family" class="catalogue" onclick="showPopup('C:/Users/smang/Downloads/meal6.png','Chicken INN®', 'R150.00', '9 pieces SoulFire® chicken')">
+            <a href="#family" class="catalogue" onclick="showPopup('images/meal6.png','Chicken INN®', 'R150.00', '9 pieces SoulFire® chicken')">
                 <span>
                     <strong>R150.00</strong> <br>Chicken INN®
                 </span>
             </a>
-            <a href="#family" class="catalogue" onclick="showPopup('C:/Users/smang/Downloads/meal7.png', 'FAMILY Barrel®', 'R300.00', '16 Hotwings®')">
+            <a href="#family" class="catalogue" onclick="showPopup('images/meal7.png', 'FAMILY Barrel®', 'R300.00', '16 Hotwings®')">
                 <span>
                     <strong>R300.00</strong> <br>FAMILY Barrel
                 </span>
@@ -101,7 +101,7 @@
                     <strong>R60.00</strong> <br>ROCK My Soul
                 </span>
             </a>
-            <a href="#family" class="catalogue" onclick="showPopup('C:/Users/smang/Downloads/meal9.png', 'FAMILY Full House®', 'R170.00', '8 pieces + 2 regular Soul Fries™<br>+ 2 regular Soulslaw® / Achaar / Tomato Salsa<br>+ 2 Licken Loafs®')">
+            <a href="#family" class="catalogue" onclick="showPopup('images/meal9.png', 'FAMILY Full House®', 'R170.00', '8 pieces + 2 regular Soul Fries™<br>+ 2 regular Soulslaw® / Achaar / Tomato Salsa<br>+ 2 Licken Loafs®')">
                 <span>
                     <strong>R170.00</strong> <br>FAMILY Full House
                 </span>
@@ -112,7 +112,7 @@
 
         <div id="family" class="pop-up">
             <div class="pop-up-container">
-                <img id="image" src="C:\Users\smang\Downloads\meal9.png" alt="meal9">
+                <img id="image" src="images/meal9.png" alt="meal9">
                 <span class="close-button" onclick="closeModal()">&times;</span>
                 <h1 id="title">FAMILY Full House®</h1>
                 <span id="price">R170</span>
@@ -126,7 +126,7 @@
         </div>
         <div id="family" class="pop-up">
             <div class="pop-up-container">
-                <img id="image" src="C:\Users\smang\Downloads\meal8.png" alt="meal8">
+                <img id="image" src="images/meal8.png" alt="meal8">
                 <span class="close-button" onclick="closeModal()">&times;</span>
                 <h1 id="title">ROCK MY SOUL®</h1>
                 <span id="price">R60.00</span>
@@ -140,7 +140,7 @@
         </div>
         <div id="family" class="pop-up">
             <div class="pop-up-container">
-                <img id="image" src="C:\Users\smang\Downloads\meal7.png" alt="meal7">
+                <img id="image" src="images/meal7.png" alt="meal7">
                 <span class="close-button" onclick="closeModal()">&times;</span>
                 <h1 id="title">FAMILY Barrel®</h1>
                 <span id="price">R300.00</span>
@@ -152,7 +152,7 @@
         </div>
         <div id="family" class="pop-up">
             <div class="pop-up-container">
-                <img id="image" src="C:\Users\smang\Downloads\meal6.png" alt="meal6">
+                <img id="image" src="images/meal6.png" alt="meal6">
                 <span class="close-button" onclick="closeModal()">&times;</span>
                 <h1 id="title">Chicken INN®</h1>
                 <span id="price">R150.00</span>
@@ -164,7 +164,7 @@
         </div>
         <div id="family" class="pop-up">
             <div class="pop-up-container">
-                <img id="image" src="C:\Users\smang\Downloads\meal5.png" alt="meal5">
+                <img id="image" src="images/meal5.png" alt="meal5">
                 <span class="close-button" onclick="closeModal()">&times;</span>
                 <h1 id="title">SOULSISTER Max®</h1>
                 <span id="price">R65.00</span>
@@ -177,7 +177,7 @@
         </div>
         <div id="family" class="pop-up">
             <div class="pop-up-container">
-                <img id="image" src="C:\Users\smang\Downloads\meal4.png" alt="meal4">
+                <img id="image" src="C:images/meal4.png" alt="meal4">
                 <span class="close-button" onclick="closeModal()">&times;</span>
                 <h1 id="title">SOULSISTER®</h1>
                 <span id="price">R43.00</span>
@@ -190,7 +190,7 @@
         </div>
         <div id="family" class="pop-up">
             <div class="pop-up-container">
-                <img id="image" src="C:\Users\smang\Downloads\meal3.png" alt="meal3">
+                <img id="image" src="images/meal3.png" alt="meal3">
                 <span class="close-button" onclick="closeModal()">&times;</span>
                 <h1 id="title">SOULSISTER Party®</h1>
                 <span id="price">R120.00</span>
@@ -202,7 +202,7 @@
         </div>
         <div id="family" class="pop-up">
             <div class="pop-up-container">
-                <img id="image" src="C:\Users\smang\Downloads\meal2.png" alt="meal2">
+                <img id="image" src="images/meal2.png" alt="meal2">
                 <span class="close-button" onclick="closeModal()">&times;</span>
                 <h1 id="title">HOTWINGS MEAL MAX®</h1>
                 <span id="price">R92.00</span>
@@ -216,7 +216,7 @@
         </div>
         <div id="family" class="pop-up">
             <div class="pop-up-container">
-                <img id="image" src="C:\Users\smang\Downloads\meal2.png" alt="meal2">
+                <img id="image" src="images/meal2.png" alt="meal2">
                 <span class="close-button" onclick="closeModal()">&times;</span>
                 <h1 id="title">LUNCH Meal</h1>
                 <span id="price">R75.00</span>
