--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                and engaging web interfaces. I also specialise in Java and Python for back-end by creating API's. Let's
                make the web more beautiful together!</p>
                <div class="button2">
-                    <a href="https://drive.google.com/file/d/1tEfgPxjVvC0me1jofnrZrLmifg1aCwvf/view?usp=drivesdk">Curriculam Vitae</a>
+                    <a href="https://drive.google.com/file/d/140VmCBFbtgugh6Aw919vy2mNpZaKKAcv/view?usp=drive_link">Curriculam Vitae</a>
                     <a href="#projects">View My Projects</a>                
                 </div>
             </div>
