--- a/resturant.html
+++ b/resturant.html
@@ -12,6 +12,7 @@
             <img src="https://chickenlicken.co.za/images/CL-small-logo.svg" alt="">
             <h1>Chicken Licken SoulFood</h1>
         </header>
+        
         <div class="carousel-container">
             <button class="carousel-button left" onclick="scrollCarousel(-1)">&#8249;</button>
             <div class="carousel">
@@ -58,7 +59,7 @@
             <button class="carousel-button right" onclick="scrollCarousel(1)">&#8250;</button>
         </div>
         
-
+<section id="products">
         <h2>CHICKEN LICKEN MEALS</h2>
         <div class="catalogue-container">
             <a href="#family" class="catalogue" onclick="showPopup('images/meal1.png', 'LUNCH Meal', 'R75.00', '2 pieces + toast + 300ml Coke')">
@@ -121,7 +122,7 @@
                     + 2 regular Soulslaw® / Achaar / Tomato Salsa <br>
                     + 2 Licken Loafs®
                 </p>
-                <a href="map.html" target="_blank">Order!</a>
+                <a href="map.html" target="_blank" id="order">Order!</a>
             </div>
         </div>
         <div id="family" class="pop-up">
@@ -229,58 +230,7 @@
             </div>
         </div>
 
-        <!--h2>ORIGINAL SQUARE SLYDERS®</h2>
-        <div class="test">
-        <span>WHEN IT’S HIP TO EAT SQUARE<br></span>
-        </div>
-        <div class="another-container">
-            <a href="#" class="another-catalogue">
-                <span>
-                    <strong>R14.00</strong> <br>1 SLYDER® Original
-                </span>
-            </a>
-            <a href="#" class="another-catalogue">
-                <span>
-                    <strong>R14.00</strong> <br>1 SLYDER® Chilli
-                </span>
-            </a>
-            <a href="#" class="another-catalogue">
-                <span>
-                    <strong>R16.00</strong> <br>1 SLYDER® Cheese
-                </span>
-            </a>
-            <a href="" class="another-catalogue">
-                <span>
-                    <strong>R27.00</strong> <br>2 SLYDERS® Original
-                </span>
-            </a>
-            <a href="#" class="another-catalogue">
-                <span>
-                    <strong>R27.00</strong> <br>2 SLYDERS® Chilli
-                </span>
-            </a>
-            <a href="#" class="another-catalogue">
-                <span>
-                    <strong>R31.00</strong> <br>2 SLYDERS® Cheese
-                </span>
-            </a>
-            <a href="#" class="another-catalogue">
-                <span>
-                    <strong>R50.00</strong> <br>4 SLYDERS® Original
-                </span>
-            </a>
-            <a href="#" class="another-catalogue">
-                <span>
-                    <strong>R50.00</strong> <br>4 SLYDERS® Chilli
-                </span>
-            </a>
-            <a href="#" class="another-catalogue">
-                <span>
-                    <strong>R58.00</strong> <br>4 SLYDERS® Cheese
-                </span>
-            </a>
-        </div-->
-
+</section>
         <script src="rest.js"></script>
     </body>
 </html>
