--- a/map.html
+++ b/map.html
@@ -20,8 +20,10 @@
         <button onclick="searchUserLocation()">Set User Location</button>
     </label>
     <label>
-        Enter store location:
-        <input type="text" id="store" placeholder="Enter Chicken Licken store near you">
+        Select store location:
+        <select id="store">
+            <option value="">Select a Chicken Licken store near you</option>
+        </select>
         <button onclick="searchStoreLocation()">Set Store Location</button>
     </label>
     <button onclick="simulateDelivery()">Simulate Delivery</button>
