new voting system

--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
                 <a>
                     Python
                 </a>
+                <a>
+                    HTML5
+                </a>
+                <a>
+                    CSS3
+                </a>
+                <a>
+                    Spring-Boot
+                </a>
+                <a>
+                    Dart
+                </a>
         </div>
         <div class="gears">
             <div class="gear gear1"></div>
@@ -97,7 +109,7 @@
                 <img src="images/Screenshot 2025-01-16 140411.png" alt="carvoting">
                 <h1>CAR VOTING APP</h1>
                 <p>Application for finding which cars people loves the most</p>
-                <a id="voteapp" href="#">view more</a>
+                <a id="voteapp" href="carvoting.html">view more</a>
             </div>
             <div>
                 <img src="images/Screenshot 2025-01-16 140758.png" alt="chatbot">
@@ -109,7 +121,7 @@
                 <img src="images/Screenshot 2025-02-12 152328.png" alt="restaurant">
                 <h1>Chicken Licken mini</h1>
                 <p>A mini clone of Chicken Licken...</p>
-                <a id="chatbotA" href="resturant.html" target="_blank">view more</a>
+                <a id="restaurant" href="resturant.html" target="_blank">view more</a>
             </div>
         </div>
 
