--- a/carvoting.html
+++ b/carvoting.html
@@ -29,7 +29,7 @@
     </header>
 
     <section class="developer-profile">
-        <img src="C:\Users\smang\OneDrive\Pictures\Saved Pictures\334066167_148732571438811_7406887273882172408_n.jpg" alt="Developer Photo" class="developer-image">
+        <img src="images/334066167_148732571438811_7406887273882172408_n.jpg" alt="Developer Photo" class="developer-image">
         <div class="developer-info">
             <h2>Simangaliso Mazweni Ntuli</h2>
             <p class="developer-title">Front-End Developer</p>
