--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <img src="images/Screenshot 2025-05-22 232344.png" alt="carvoting">
                 <h1>CAR VOTING APP</h1>
                 <p>Application for finding which cars people loves the most</p>
-                <a id="voteapp" href="carvoting.html">view more</a>
+                <a id="voteapp" href="carvoting.html" target="_blank">view more</a>
             </div>
             <div>
                 <img src="images/Screenshot 2025-01-16 140758.png" alt="chatbot">
