--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             
             <div class="hero-image">
                 <div class="image-wrapper">
-                    <img src="C:\Users\smang\OneDrive\Pictures\Saved Pictures\IMG-20250405-WA0025.jpg" alt="Simangaliso Ntuli" loading="lazy">
+                    <img src="images/334066167_148732571438811_7406887273882172408_n.jpg" alt="Simangaliso Ntuli" loading="lazy">
                 </div>
                 <div class="tech-stack">
                     <div class="tech-icon" data-tooltip="JavaScript">
@@ -107,7 +107,7 @@
             <div class="about-content">
                 <div class="about-image">
                     <div class="image-wrapper">
-                        <img src="C:\Users\smang\OneDrive\Pictures\Saved Pictures\IMG-20250405-WA0025.jpg" alt="Simangaliso working" loading="lazy">
+                        <img src="images/IMG-20250405-WA0025.jpg" alt="Simangaliso working" loading="lazy">
                     </div>
                 </div>
                 
@@ -290,7 +290,7 @@
                 <!-- Project 1 -->
                 <div class="project-card" data-category="fullstack">
                     <div class="project-image">
-                        <img src="C:\Users\smang\OneDrive\Pictures\Screenshots\Screenshot 2025-01-19 190912.png" alt="Mpheba Matrix" loading="lazy">
+                        <img src="images/Screenshot 2025-05-24 231333.png" alt="Mpheba Matrix" loading="lazy">
                         <div class="project-links">
                             <a href="matrix.html" class="project-link" aria-label="Live Demo" target="_blank">
                                 <i data-feather="external-link"></i>
@@ -317,7 +317,7 @@
                 <!-- Project 2 -->
                 <div class="project-card" data-category="frontend">
                     <div class="project-image">
-                        <img src="C:\Users\smang\OneDrive\Pictures\Screenshots\Screenshot 2025-05-22 232344.png" alt="Car Voting App" loading="lazy">
+                        <img src="images/Screenshot 2025-05-22 232344.png" alt="Car Voting App" loading="lazy">
                         <div class="project-links">
                             <a href="carvoting.html" class="project-link" aria-label="Live Demo" target="_blank">
                                 <i data-feather="external-link"></i>
@@ -345,7 +345,7 @@
                 <!-- Project 3 -->
                 <div class="project-card" data-category="fullstack">
                     <div class="project-image">
-                        <img src="C:\Users\smang\OneDrive\Pictures\Screenshots\Screenshot 2025-05-24 201440.png" alt="Health Chatbot" loading="lazy">
+                        <img src="images/Screenshot 2025-05-24 201440.png" alt="Health Chatbot" loading="lazy">
                         <div class="project-links">
                             <a href="chatbot.html" class="project-link" aria-label="Live Demo" target="_blank">
                                 <i data-feather="external-link"></i>
@@ -372,7 +372,7 @@
                 <!-- Project 4 -->
                 <div class="project-card" data-category="frontend">
                     <div class="project-image">
-                        <img src="C:\Users\smang\OneDrive\Pictures\Screenshots\Screenshot 2025-02-12 152328.png" alt="Chicken Licken Clone" loading="lazy">
+                        <img src="images/Screenshot 2025-02-12 152328.png" alt="Chicken Licken Clone" loading="lazy">
                         <div class="project-links">
                             <a href="resturant.html" class="project-link" aria-label="Live Demo" target="_blank">
                                 <i data-feather="external-link"></i>
