--- a/carvoting.html
+++ b/carvoting.html
@@ -357,8 +357,8 @@
                 <h3>CarVote 2025</h3>
                 <p>The most interactive car voting experience on the web. Discover trends, compare models, and make your voice heard!</p>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/smanga.ntuli.378"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://x.com/Flexatrone"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                     <a href="#"><i class="fab fa-youtube"></i></a>
                 </div>
