--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                     
                     <div class="about-actions">
-                        <a href="path/to/resume.pdf" class="btn btn-primary">View-My CV</a>
+                        <a href="https://drive.google.com/file/d/1-WUByIxSBlEssBGbPZWWPInEa-MFUK-8/view?usp=drive_link" class="btn btn-primary" target="_blank">View-My CV</a>
                         <a href="#contact" class="btn btn-secondary">Hire Me</a>
                     </div>
                 </div>
