--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                     
                     <div class="about-actions">
-                        <a href="https://drive.google.com/file/d/1-WUByIxSBlEssBGbPZWWPInEa-MFUK-8/view?usp=drive_link" class="btn btn-primary" target="_blank">View-My CV</a>
+                        <a href="https://drive.google.com/file/d/1oFI6_JxID8IZA_QqNrQKKMwYi9xf99n7/view?usp=sharing" class="btn btn-primary" target="_blank">View-My CV</a>
                         <a href="#contact" class="btn btn-secondary">Hire Me</a>
                     </div>
                 </div>
@@ -543,3 +543,4 @@
 
 </body>
 </html>
+
