--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@
                                 <div class="skill-level" data-level="35"></div>
                             </div>
                         </div>
+						<div class="skill-item">
+                            <div class="skill-info">
+                                <img src="https://th.bing.com/th/id/R.ccd51215fd5a784acc78e158f6cd7ef9?rik=K5BY8oy%2fbY3Fbg&pid=ImgRaw&r=0" alt="WordPress" loading="lazy">
+                                <span>WordPress</span>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="skill-level" data-level="70"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 
@@ -543,4 +552,5 @@
 
 </body>
 </html>
+
 
